--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,15 @@ body {
 
 h1 {
     color: black;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+}
+h2 {
+	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 p1 {
     color: black;
-    font-size: 16;
+    font-size: 20;
 }
 
 p2{
@@ -19,4 +23,65 @@ p3.tab {
 	margin-left: 40px;
 	color: black;
     font-size: 14;
+}
+
+#name {
+	float:left;
+	margin-left: 5px;
+	font-size: 24px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: #ffffff;
+}
+
+#email{
+	float:right;
+	margin-right: 5px;
+	padding-top: 5px;
+	font-size: 16px;
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	color: #ffffff;
+}
+
+li {
+	list-style-type: square;
+}
+
+a:hover {
+	font-weight: bold;
+}
+
+.right {
+	position: relative;
+	float: left;
+	margin-top: 50px;
+	width: 100%;
+	height: 100%;
+	background-color: #D1E3FF;
+	margin-bottom: 10px;
+}
+
+#header {
+	z-index: 1;
+	position: fixed;
+	width: 98.91%;
+	margin-top: -20px;
+	height: 60px;
+	background-color: rgb(40, 172, 173);
+	margin-bottom: 10px;
+}
+
+#footer {
+	position: relative;
+	height: 50px;
+	background-color: rgb(40, 172, 173);
+	clear: both;
+	font-family: Verdana, sans-serif;
+	font-size: 14px;
+	text-align: center;
+	color: #ffffff;
+}
+
+#footer p {
+	position: relative;
+	padding-top: 15px;
 }
