--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,7 @@ p3.tab {
 #email{
 	float:right;
 	margin-right: 5px;
-	padding-top: 5px;
-	font-size: 16px;
+	font-size: 24px;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	color: #ffffff;
 }
@@ -85,3 +84,71 @@ a:hover {
 	position: relative;
 	padding-top: 15px;
 }
+/* CSS For the slide show. */
+.container {
+ 	max-width: 600px;
+ 	background-color: #D1E3FF;
+ 	text-align: center;
+ 	position: fixed; right: 100px; top: 100px;
+
+	/* float: right; */
+	margin-top: 125px;
+	padding-right: 100px;
+	background-color: #D1E3FF;
+	margin-bottom: 10px;
+}
+.container div {
+ 	background-color: #D1E3FF;
+ 	width: 500px;
+ 	height: 500px;
+ 	display: inline-block;
+  	display: none;
+}
+.container img {
+ 	height: 100%;
+}
+
+button {
+ 	position: absolute;
+}
+/* Style for buttons if they're added
+.next:hover {
+	border: inherit;
+    background:green;
+    box-shadow: 0px 0px 1px #777;
+}
+
+.prev:hover {
+	border: inherit;
+    background:green;
+    box-shadow: 0px 0px 1px #777;
+}
+
+.next {
+ 	right: -70px;
+ 	position: right:0px; bottom: 0px;
+ 	background-color: #ccc;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: black;
+    font-family: 'Oswald';
+    font-size: 20px;
+    cursor: pointer;
+    border: groove;
+
+}
+
+.prev {
+	left: -2px;
+ 	position: left:0px; bottom: 0px;
+ 	background-color: #ccc;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: black;
+    font-family: 'Oswald';
+    font-size: 20px;
+    cursor: pointer;
+    border: groove;
+} */
