--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,10 @@ body {
 
 h1 {
     color: black;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
 }
 h2 {
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "Comic Sans MS", sans-serif;
 }
 
 p1 {
@@ -29,7 +29,7 @@ p3.tab {
 	float:left;
 	margin-left: 5px;
 	font-size: 24px;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "Comic Sans MS", sans-serif;
 	color: #ffffff;
 }
 
@@ -37,7 +37,7 @@ p3.tab {
 	float:right;
 	margin-right: 5px;
 	font-size: 24px;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: "Comic Sans MS", sans-serif;
 	color: #ffffff;
 }
 
