--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,11 @@
  * Project Name: Onassis - Free Bootstrap 3 Theme
  * Version: 1.0
  * URL: http://blacktie.co
+ *
+ *
+ * Altered/Updated by: Louis Nieuwoudt;
+ *
+ *
  */
 form {
 	position:relative;
